public/orator/css/styles.css
/* ... */
#playback-controls.dark-mode .progress-bar {
    background-color: #c4c4c4 !important;
}

.navbar-book-cover-container {
    height: 42px;
    width: 52px;
    text-align: center;
}

.navbar-book-cover-container img {
    height: 100%;
}

.reader-container-wrapper {
    padding: 5px 10px 5px 10px;
    background: #eeeeee;
    transition: line-height 3s ease-in-out;
    position: relative;
}

.reader-container-padding {
    height: 500px;
}

.reader-container {
    position: relative;
}

.reader-container .highlight {
    position: absolute;
    top: 0;
    height: 0;
    left: 0;
    right: 0;
    border-radius: 7px;
    transition: all 0.5s ease-in-out;
}

.reader-container p {
    padding: 10px 10px;
    color: #121212;
    margin: 0;
    border-radius: 7px;
    text-shadow: 0 0.012rem, 0.02rem 0 0, 0.02rem 0.02rem;
    font-family: "Radley", sans-serif;
    font-weight: 400;
    font-size: 13pt;
    line-height: 15pt;
    transition: opacity 1s cubic-bezier(0.4, 0, 0.2, 1);
}

.reader-container p.hidden {
    opacity: 0 !important;
}


.dark-mode .reader-container p {
    text-shadow: none;
}

.reader-container p span {
    position: relative;
    border-radius: 3px;
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
    transition: all 0.5s ease-out;
}

.reader-container p span.active {
    padding: 0 2px;
    margin: 0 -2px;
}

.reader-container p span.italic {
    font-style: italic;
}

.reader-container .reader-paragraph {
    scroll-margin-top: 70px;
    padding: 0;
}

#playback-chapters {
    position: fixed;
    top: 0;
    left: -100%;
    width: 100%;
    bottom: 0;
    transition: all .5s ease-in-out;
}

#playback-chapters.active {
    left: 0;
}

.reader-fullscreen #playback-chapters {
    left: -100% !important;
}

.orator-backdrop {
    width: calc(100% - 300px);
    height: 100%;
    position: absolute;
    display: flex;
    z-index: 0;
    margin-left: 300px;
}

.orator-backdrop.darken {
    background-color: #00000050;
}

.playback-chapters-list-container {
    width: 300px;
    height: 100%;
    background-color: #ffffffcc;
    position: relative;
    display: flex;
    flex-direction: column;
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    box-shadow: 2px 2px 20px #0000009c;
}

.playback-chapter-item {
    padding: 5px 10px;
    border: 2px solid #00000012;
    width: 100%;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    color: black;
    cursor: pointer;
    border-radius: 10px;
    margin-bottom: 10px;
    font-family: 'Crimson Pro', sans-serif;
    text-shadow: 0.2px 0.2px 0.5px black;
    scroll-margin-top: 200px;
}

.playback-chapter-item.active {
    background-color: #6f1a8d30;
}

.playback-chapter-item span.italic {
    font-style: italic;
}

.playback-chapter-header {
    padding: 0;
    margin: 0;
    font-family: 'Crimson Pro', sans-serif;
    font-weight: bold;
    font-size: 1.5em;
    text-align: center;
    margin-bottom: 10px;
    background: black;
    height: 100px;
    min-height: 120px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.playback-chapter-header h1 {
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 0;
    margin: 0;
    text-shadow: 0 0 5px black;
}

.playback-chapters-list {
    overflow: auto;
    flex-grow: 1;
    padding: 0 5px;
    padding-bottom: 100px;
}

.buffer-health {
    color: #909090;
    text-align: center;
    padding-bottom: 5px;
    font-size: 0.7rem;
    text-transform: none;
    display: grid;
    grid-template-columns: 1fr;
    grid-column-gap: 5px;
    align-items: center;
}

.buffer-health .chapter-timings {
    display: grid;
    grid-template-columns: auto auto;
    justify-content: space-between;
}

.buffer-health .spinner-border {
    opacity: 0;
    transition: all 1s;
    height: 10px;
    width: 10px;
    margin-left: -10px;
}

.buffer-health-info {
    display: flex;
    align-items: center;
}

.buffer-health-info span, .buffer-health-info i {
    /* margin-top: 3px; */
}

.buffer-health .buffer-health-info i {
    font-size: 1.5em;
    line-height: 1em;
    margin-right: 3px;
    margin-top: 3px;
}

.buffer-health .buffer-health-info i.persisted {
    color: #00800070;
}

.buffer-health .spinner-border.active {
    opacity: 1;
    margin-left: 5px;
}

div#message-board-wrapper {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    backdrop-filter: blur(2px) brightness(0.8);
    -webkit-backdrop-filter: blur(2px) brightness(0.8);
}

.message-board-backdrop {
    background: #5d5d5d99;
    display: flex;
    width: 100%;
    height: 100%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.message-board-inner {
    width: 300px;
    text-align: center;
    background: #252525;
    padding: 10px;
    padding-bottom: 20px;
    border-radius: 20px;
}

.message-board-header {
    text-transform: uppercase;
    border-bottom: 4px solid #00000040;
    padding-bottom: 10px;
}

.message-board-container {
    padding-top: 10px;
    font-size: 1rem;
    word-break: break-word;
    text-align: left;
}

.message-board-container .progress {
    height: 5px;
}

.message-board-container .progress .progress-bar {
    background-color: #9f5ca3;
}

.progress .progress-bar {
    transition: width 0.1s ease-out;
}

.win7-progress {
    overflow: hidden;
}

.win7-progress-fill {
    height: 100%;
    position: relative;
}
/* ... */

